[package]
name = "blve_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blve_parser = { version = "0.1.0", path = "../blve_parser" }
serde_json = "1.0.96"
html_parser = { git = "https://github.com/s19514tt/rust-html-parser-fork-for-blve/", rev = "952691db3643934e98b4d55853bb8adceb6b1ebc" }
nanoid = "0.4.0"
