[package]
name = "blve_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blve_parser = { path = "../blve_parser" }
serde_json = "1.0.96"
blve_html_parser = { path = "../blve_html_parser" }
nanoid = "0.4.0"
getrandom = { version = "0.2.9", features = ["js"] }
