[package]
name = "blve_generator"
version = "0.1.0"
edition = "2021"
default-run = "default"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.96"
blve_html_parser = { path = "../blve_html_parser" }
nanoid = "0.4.0"
getrandom = { version = "0.2.9", features = ["js"] }
blve_parser = { path = "../blve_parser" }
rand = "0.8.5"
lazy_static = "1.4.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
regex = "1.8.4"

[[bin]]
name = "gen-test"
path = "tests/gen_test.rs"

[[bin]]
name = "default"
path = "src/main.rs"
