[package]
name = "blve_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html_parser = { git = "https://github.com/s19514tt/rust-html-parser-fork-for-blve/", rev = "952691db3643934e98b4d55853bb8adceb6b1ebc" }
nanoid = "0.4.0"
nom = "7.1.3"
serde_json = "1.0.96"
swc_common = { version = "0.31.12", features = ["tty-emitter"] }
swc_ecma_ast = { version = "0.104.5", features = ["serde-impl"] }
swc_ecma_parser = "0.134.12"
