[package]
name = "lunas_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.96"
lunas_html_parser = { path = "../lunas_html_parser" }
nanoid = "0.4.0"
getrandom = { version = "0.2.9", features = ["js"] }
blve_parser = { path = "../blve_parser" }
rand = "0.8.5"
lazy_static = "1.4.0"
itertools = "0.11.0"
swc_ecma_parser = "0.137.4"
swc_common = { version = "0.31.18" }
swc_ecma_ast = { version = "0.107.2" }

[dev-dependencies]
pretty_assertions = "1.3.0"
regex = "1.8.4"
backtrace = "0.3.73"

[features]
playground = []
