[package]
name = "lunas_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nanoid = "0.4.0"
nom = "7.1.3"
serde_json = "1.0.96"
swc_common = { version = "0.31.18", features = ["tty-emitter"] }
swc_ecma_ast = { version = "0.107.2", features = ["serde-impl"] }
swc_ecma_parser = "0.137.4"
lunas_html_parser = { path = "../lunas_html_parser" }
